--- a/server/package.json
+++ b/server/package.json
@@ -35,7 +35,10 @@
     "replicate": "^1.4.0",
     "sharp": "^0.34.5",
     "uuid": "^10.0.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "typescript": "^5.6.3",
+    "tsx": "^4.19.2",
+    "@types/node": "^22.9.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -45,7 +48,6 @@
     "@types/geoip-lite": "^1.4.4",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^2.0.0",
-    "@types/node": "^22.9.0",
     "@types/nodemailer": "^7.0.4",
     "@types/supertest": "^6.0.3",
     "@types/uuid": "^10.0.0",
@@ -54,8 +56,6 @@
     "compression": "^1.8.1",
     "drizzle-kit": "^0.31.8",
     "supertest": "^7.1.4",
-    "tsx": "^4.19.2",
-    "typescript": "^5.6.3",
     "vitest": "^4.0.16"
   }
 }
